visualobjects.js:  2 patchs to avoid a lot of javascript !! Color.cs and Coordinate.cs: use invariant culture to avoid error due to culture formating ie french decimal separator :-) Index.html: Add <!DOCTYPE html> to avoid warning from the developer's console VisualObjects.WebService.csproj: change CopyToOutpuDirectory Always by security. Works well ! http://i.imgur.com/eun8UND.png

--- a/Actors/VisualObjects/VisualObjects.WebService/wwwroot/Index.html
+++ b/Actors/VisualObjects/VisualObjects.WebService/wwwroot/Index.html
@@ -1,4 +1,5 @@
-﻿<html>
+﻿<!DOCTYPE html>
+<html>
     <head>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Windows Fabric Visual Objects Demo</title>
