Updating to .NET 4.5.1, adding readonly attribute to visual object actor's GetStateAsJsonAsync method to avoid unnecessary state replication.

--- a/Actors/VisualObjects/VisualObjects.WebService/wwwroot/Index.html
+++ b/Actors/VisualObjects/VisualObjects.WebService/wwwroot/Index.html
@@ -1,7 +1,7 @@
 ﻿<html>
     <head>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Windows Fabric Visual Objects Demo</title>
+        <title>Microsoft Azure Service Fabric Visual Objects Demo</title>
         <script type="text/javascript" src="Scripts/gl-matrix-min.js"></script>
         <script type="text/javascript" src="Scripts/webgl-utils.js"></script>
         <script type="text/javascript" src="Scripts/visualobjects.js"></script>
