Sample is now accessible @ http://<>:8081/wordcount/

--- a/Services/WordCount/WordCount.WebService/wwwroot/Index.html
+++ b/Services/WordCount/WordCount.WebService/wwwroot/Index.html
@@ -13,7 +13,7 @@
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic'>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.0/angular-material.min.css" />
-    <link rel="stylesheet" href="assets/app.css" />
+    <link rel="stylesheet" href="./wwwroot/assets/app.css" />
     <style type="text/css">
         /**
          * Hide when Angular is not yet loaded and initialized
@@ -76,9 +76,9 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.6.0/angular-material-icons.min.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
-    <script src="./src/WordCount.js"></script>
-    <script src="./src/WordCountController.js"></script>
-    <script src="./src/WordCountService.js"></script> 
+    <script src="./wwwroot/src/WordCount.js"></script>
+    <script src="./wwwroot/src/WordCountController.js"></script>
+    <script src="./wwwroot/src/WordCountService.js"></script> 
     <div>{{message}}</div>
 </body>
 </html>
