format nuget config
Update to fix rotation

Minor cleanup and adding of parameter for number of objects

Update to separate websocket into separate listener

--- a/Actors/VisualObjects/VisualObjects.WebService/wwwroot/Index.html
+++ b/Actors/VisualObjects/VisualObjects.WebService/wwwroot/Index.html
@@ -14,7 +14,7 @@
         }
     </style>
 </head>
-<body onload="webGLStart();">
+<body onload="startDrawing();">
     <canvas id="canvas" resize keepalive="true"> </canvas>
 </body>
 </html>
