--- a/Services/WordCount/WordCount.WebService/wwwroot/Index.html
+++ b/Services/WordCount/WordCount.WebService/wwwroot/Index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Counting of Words</title>
-    <script type="text/javascript" src="Files/jquery-2.1.3.min.js"></script>
+    <script type="text/javascript" src="jquery-2.1.3.min.js"></script>
     <style type="text/css">
         html, body, div, span, applet, object, iframe,
         h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -48,7 +48,7 @@
 </head>
 <body>
     <script type="text/javascript">
-        var serviceUrl = location.protocol + '//' + location.hostname + (location.port ? ':' + location.port : '');
+        var serviceUrl = location.protocol + '//' + location.hostname + (location.port ? ':' + location.port : '') + '/wordcount';
         var iteration = 0;
 
         $(function () {
@@ -59,7 +59,7 @@
         function SendWords()
         {
             $.ajax({
-                url: serviceUrl + '/wordcount/AddWord/' + randomWord(),
+                url: serviceUrl + '/api/AddWord/' + randomWord(),
                 method: 'POST'
             })
            .done(function (wordResult) {
@@ -70,7 +70,7 @@
         function Count()
         {
             $.ajax({
-                url: serviceUrl + '/wordcount/Count?c=' + Math.random(),
+                url: serviceUrl + '/api/Count?c=' + Math.random(),
                 dataType: 'text',
                 method: 'GET'
             })
