--- a/Actors/VisualObjects/VisualObjects.WebService/wwwroot/Index.html
+++ b/Actors/VisualObjects/VisualObjects.WebService/wwwroot/Index.html
@@ -1,46 +1,20 @@
 <html>
-    <head>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Microsoft Azure Service Fabric Visual Objects Demo</title>
-        <script type="text/javascript" src="Scripts/gl-matrix-min.js"></script>
-        <script type="text/javascript" src="Scripts/webgl-utils.js"></script>
-        <script type="text/javascript" src="Scripts/visualobjects.js"></script>
-        <script id="shader-fs" type="x-shader/x-fragment">
-        precision mediump float;
-
-        varying vec4 vColor;
-
-        void main(void) {
-        gl_FragColor = vColor;
+<head>
+    <title>Microsoft Azure Service Fabric Visual Objects Demo</title>
+    <script type="text/javascript" src="Scripts/visualobjects.js"></script>
+    <script type="text/javascript" src="Scripts/paper-full.js"></script>
+    <style type="text/css">
+        body {
+            background-color: black;
         }
-    </script>
-        <script id="shader-vs" type="x-shader/x-vertex">
-        attribute vec3 aVertexPosition;
-        attribute vec4 aVertexColor;
 
-        uniform mat4 uMVMatrix;
-        uniform mat4 uPMatrix;
-
-        varying vec4 vColor;
-
-        void main(void) {
-        gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
-        vColor = aVertexColor;
+        canvas {
+            width: 99%;
+            height: 98%;
         }
-    </script>
-        <style type="text/css">
-            header {
-                background-color: black;
-                display: block;
-            }
-
-            body {
-                background-color: black;
-                display: block;
-            }
-        </style>
-    </head>
-<body onload="webGLStart();">
-    <canvas id="canvas"></canvas>
+    </style>
+</head>
+<body onload="startDrawing();">
+    <canvas id="canvas" resize keepalive="true"> </canvas>
 </body>
 </html>
