* Application parameters for the word count service partition count * Support application gateway and deploying multiple instances of the word count applications in the same cluster
change the port of the word count application to 8081

use 8081 endpoint by default with an option to use dynamic port with application gateway

change the commenets in the service manifest

--- a/Services/WordCount/WordCount.WebService/wwwroot/Index.html
+++ b/Services/WordCount/WordCount.WebService/wwwroot/Index.html
@@ -48,7 +48,8 @@
 </head>
 <body>
     <script type="text/javascript">
-        var serviceUrl = location.protocol + '//' + location.hostname + (location.port ? ':' + location.port : '') + '/wordcount';
+        var serviceUrl = location.protocol + '//' + location.hostname + (location.port ? ':' + location.port : '');
+        var serviceUrl = serviceUrl + (location.pathname ? '/' + location.pathname : '');
         var iteration = 0;
 
         $(function () {
